--- a/MonetDb.Mapi/MonetDb.Mapi.csproj
+++ b/MonetDb.Mapi/MonetDb.Mapi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Authors>Alexandr Sitdikov, Mitchell Weggemans</Authors>
     <Company>Alexandr Sitdikov, MonetDBSolutions</Company>
     <Description>MonetDB.Net</Description>
